Replace more uses of MapBuilder with JCL maps